--- a/public/index.html
+++ b/public/index.html
@@ -4,40 +4,105 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#191919" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A web interface used to view modmail threads and messages"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <title>Floor-Gang Modmail</title>
+    <style>
+      html {
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        width: 100vw;
+        font-family: 'Monserrat', sans-serif;
+      }
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+      body {
+        margin: 0;
+        padding: 0;
+        transition: ease background .5s;
+        background: #000;
+      }
+
+      .d-none {
+        display: none;
+      }
+
+      #splash-container {
+        /*display: none;*/
+      }
+
+      .circle-white {
+        width: 3em;
+        height: 3em;
+        border: 2px dashed #f6f6f6;
+        border-radius: 50%;
+      }
+
+      .preloader .text {
+        color: #f6f6f6;
+        position: absolute;
+        width: 100%;
+        text-align: center;
+        top: calc(50% - 5em);
+        font-size: 2em;
+        font-weight: bold;
+      }
+
+      .preloader .circle {
+        transition: ease-out all .6s;
+        animation: rotate-circle 4s linear infinite;
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: auto;
+        top: 0;
+        bottom: 0;
+      }
+
+      .preloader .circle:after {
+        transition: ease-out all .6s;
+        content: '';
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background: #f6f6f6;
+        position: absolute;
+        top: calc(1.5em - 10px);
+        left: calc(1.5em - 10px);
+      }
+
+      @keyframes rotate-circle {
+        0% {
+          transform: rotateZ(0deg);
+        }
+        100% { transform: rotateZ(720deg); }
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="splash-container">
+      <div class="preloader">
+        <div class="text">Loading Floor Gang Modmail</div>
+        <span class="circle circle-white"></span>
+      </div>
+      <div class="splash d-none">
+            <span class="letters-container">
+                <span class="letters letters-left">Welcome</span>
+                <span class="letters bang">!</span>
+            </span>
+        <span class="circle circle-white"></span>
+        <span class="circle circle-dark"></span>
+        <span class="circle circle-container">
+                <span class="circle circle-dark-dashed"></span>
+            </span>
+      </div>
+    </div>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
