--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,21 @@
       }
 
       #splash-container {
-        /*display: none;*/
+        display: block;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background: #181818;
+        z-index: 9999;
+        top: 0;
+        left: 0;
+        overflow:hidden;
+        transition: 0.4s opacity ease;
       }
 
       .circle-white {
-        width: 3em;
-        height: 3em;
+        width: 8em;
+        height: 8em;
         border: 2px dashed #f6f6f6;
         border-radius: 50%;
       }
@@ -54,7 +63,7 @@
       }
 
       .preloader .circle {
-        transition: ease-out all .6s;
+        /*transition: ease-out all .6s;*/
         animation: rotate-circle 4s linear infinite;
         position: absolute;
         left: 0;
@@ -65,15 +74,14 @@
       }
 
       .preloader .circle:after {
-        transition: ease-out all .6s;
         content: '';
-        width: 20px;
-        height: 20px;
+        width: 24px;
+        height: 24px;
         border-radius: 50%;
         background: #f6f6f6;
         position: absolute;
-        top: calc(1.5em - 10px);
-        left: calc(1.5em - 10px);
+        top: calc(4em - 14px);
+        left: calc(4em - 14px);
       }
 
       @keyframes rotate-circle {
@@ -90,17 +98,6 @@
       <div class="preloader">
         <div class="text">Loading Floor Gang Modmail</div>
         <span class="circle circle-white"></span>
-      </div>
-      <div class="splash d-none">
-            <span class="letters-container">
-                <span class="letters letters-left">Welcome</span>
-                <span class="letters bang">!</span>
-            </span>
-        <span class="circle circle-white"></span>
-        <span class="circle circle-dark"></span>
-        <span class="circle circle-container">
-                <span class="circle circle-dark-dashed"></span>
-            </span>
       </div>
     </div>
     <div id="root"></div>
