added titles to pages

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Floor-Gang Modmail</title>
+    <title>Modmail</title>
     <style>
       html {
         margin: 0;
@@ -26,10 +26,6 @@
         padding: 0;
         transition: ease background .5s;
         background: #000;
-      }
-
-      .d-none {
-        display: none;
       }
 
       #splash-container {
@@ -63,7 +59,6 @@
       }
 
       .preloader .circle {
-        /*transition: ease-out all .6s;*/
         animation: rotate-circle 4s linear infinite;
         position: absolute;
         left: 0;
@@ -96,7 +91,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="splash-container">
       <div class="preloader">
-        <div class="text">Loading Floor Gang Modmail</div>
+        <div class="text">Loading Modmail</div>
         <span class="circle circle-white"></span>
       </div>
     </div>
