added icons / updated metadata

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/icon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#191919" />
+    <meta property="og:image" content="%PUBLIC_URL%/icon/logo256.png" />
+    <meta property="og:title" content="Modmail" />
+    <meta property="og:url" content="https://modmail.pewdiemc.com/" />
+    <meta property="og:description" content="A web interface used to view modmail threads and messages" />
     <meta
       name="description"
       content="A web interface used to view modmail threads and messages"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon/logo256.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Modmail</title>
     <style>
